--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "angular-err-src": "^1.0.4",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "helmet": "^3.14.0",
